[package]
name = "dasmooikut_nl"
version = "0.1.0"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
voca_rs = "1.10.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "serve"]
